// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> by default matches with snapshot 1`] = `
<span
  className="sc-bdVaJa bDWFJH"
/>
`;

exports[`<Text /> with as prop matches with snapshot 1`] = `
<div
  className="sc-bdVaJa bDWFJH"
/>
`;

exports[`<Text /> with tag prop matches with snapshot 1`] = `
<div
  className="sc-bdVaJa bDWFJH"
/>
`;
